--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,107 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.gallery {
+  display: flex;
+  width: 1440px;
+  height: 696px;
+  padding: 24px 156px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  background-color: #FFF;
+  list-style: none;
+}
+
+.gallery-image {
+  /* cursor: pointer; */
+  width: 360px;
+  height: 200px;
+  cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 44 44" fill="none"><path d="M14.9227 39.9098C15.2524 40.1837 15.6675 40.3335 16.0961 40.3333L35.5991 40.3333C36.5715 40.3333 37.5042 39.947 38.1918 39.2594C38.8794 38.5717 39.2657 37.6391 39.2657 36.6666L39.2657 23.4483C39.2654 22.5462 38.9326 21.676 38.3308 21.0039C37.7291 20.3318 36.9008 19.9052 36.0042 19.8055L22.7657 18.3333L22.7657 7.33331C22.7658 6.36085 22.3794 5.42822 21.6918 4.74059C21.0042 4.05295 20.0715 3.66664 19.0991 3.66664C18.1266 3.66664 17.194 4.05295 16.5064 4.74059C15.8187 5.42822 15.4324 6.36085 15.4324 7.33331L15.4324 29.3333L9.87741 27.1113C9.41333 26.9258 8.91623 26.837 8.41663 26.8505C7.91702 26.864 7.42543 26.9795 6.97204 27.1898C6.51865 27.4001 6.11301 27.7008 5.78001 28.0735C5.44702 28.4462 5.1937 28.883 5.03558 29.3571L4.82841 29.9805C4.71157 30.3302 4.70314 30.7071 4.80423 31.0618C4.90533 31.4164 5.11121 31.7322 5.39491 31.9678L14.9227 39.9098Z" fill="%234E75FF"/></svg>') 0 0, auto;
+}
+
+.gallery-image:hover {
+  width: 376px;
+  height: 208px;
+}
+
+.feedback-form {
+display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 16px;
+  border-radius: 8px;
+    padding: 24px;
+    width: 408px;
+    height: 296px;
+    background: #fff;
+}
+
+input[type=email] {
+  display: flex;
+  align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 8px;
+    width: 360px;
+    height: 72px;
+    font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      color: #2e2f42;
+      font-family: "Montserrat", sans-serif;
+      border-radius: 4px;
+      border: 1px solid #808080;
+}
+input:hover{
+  border-radius: 4px;
+    border: 1px solid #000;
+}
+
+textarea:hover{
+  border-radius: 4px;
+    border: 1px solid #000;
+}
+
+textarea{ 
+  display: flex;
+  align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 8px;
+  width: 360px;
+    height: 112px;
+      font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #2e2f42;
+        font-family: "Montserrat", sans-serif;
+}
+button[type=submit]{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 95px;
+  height: 40px;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+}
+
+button[type=submit]:hover{
+  background-color: #6c8cff;
+}
